--- a/YonderTODO.html
+++ b/YonderTODO.html
@@ -8,10 +8,12 @@
 	<div id="mainDiv">
 		<h2 id="header"> What I need to do: </h2>
 		<input id="newTodo" placeholder="New TODO"/>
-		<ul id='list'>			
+		<ul id='list'>
+
 		</ul>
+		<button id='btn'>delete</button>
 	</div>	
-	
+
 	
 	<script src='YonderTODO.js'></script>
 </body>
