--- a/YonderTODO.html
+++ b/YonderTODO.html
@@ -7,14 +7,12 @@
 <body>
 	<div id="mainDiv">
 		<h2 id="header"> What I need to do: </h2>
-		<input id="newTodo" placeholder="New TODO"/>
+		<input id="newTodo" placeholder="New TODO..."/>
 		<ul id='list'>
-
 		</ul>
 		<button id='btn'>delete</button>
 	</div>	
 
-	
 	<script src='YonderTODO.js'></script>
 </body>
 </html>
