--- a/YonderTODO.html
+++ b/YonderTODO.html
@@ -10,7 +10,12 @@
 		<input id="newTodo" placeholder="New TODO..."/>
 		<ul id='list'>
 		</ul>
-		<button id='btn'>delete</button>
+		<div id='bottomListItem'>
+			<button id='btn'>delete</button>
+			<i id='remainingTxt'>remaining:</i>
+			<button id='btn1'>(de)select all</button>
+		</div>
+		
 	</div>	
 
 	<script src='YonderTODO.js'></script>
